--- a/Flow Cytometry Data Analysis Using Non-Negative Matrix Factorization (NMF)/FCS-NMF.ipynb
+++ b/Flow Cytometry Data Analysis Using Non-Negative Matrix Factorization (NMF)/FCS-NMF.ipynb
@@ -158,7 +158,7 @@
     "    return df\n",
     "\n",
     "# Load data\n",
-    "fcs_path = r\"/home/@home/pclab2/Jeyarish/Jeyarish_FCS_Project/Raw_FCS_file/LUNG PROJECT 11F24_24218 _PRADYOT_GP1_PB__T1_ICP 1.fcs\"\n",
+    "fcs_path = "#Enter the input path"\n",
     "df = load_and_normalize_fcs(fcs_path)\n",
     "\n",
     "print(f\"Data shape: {df.shape}\")\n",
@@ -260,8 +260,8 @@
     "# Save results (optional)\n",
     "output_dir = \"results\"\n",
     "os.makedirs(output_dir, exist_ok=True)\n",
-    "W_df.to_csv((r\"/home/@home/pclab2/Jeyarish/Jeyarish_FCS_Project/Non-negative_matrix_factorization/Inside_fcs/NMF_cell_components.csv\"), index=False)\n",
-    "H_df.to_csv((r\"/home/@home/pclab2/Jeyarish/Jeyarish_FCS_Project/Non-negative_matrix_factorization/Inside_fcs/NMF_marker_contributions.csv\"), index=True)\n",
+    "W_df.to_csv((# Enter the output file path), index=False)\n",
+    "H_df.to_csv((# Enter the output file path), index=True)\n",
     "print(f\"\\nResults saved to the specified directory.\")"
    ]
   },
